musicLang/src/musicLang/parser/musiclang.java
/* musiclang.java */
/* Generated By:JavaCC: Do not edit this line. musiclang.java */
package musicLang.parser;

import javax.sound.midi.MidiUnavailableException;
import java.util.ArrayList;

import musicLang.*;

public class musiclang implements musiclangConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException, MidiUnavailableException {
    if (args.length == 0)
    {
        System.out.println("Reading input from command line");
        musiclang parser = new musiclang(System.in);
    }
    else
    {
        System.out.println("Reading input from file as argument");
        try {
            musiclang parser = new musiclang(new java.io.FileInputStream(args[0]));
          } catch (java.io.FileNotFoundException e) {
            System.out.println("File not found.");
            return;
          }
    }

    musiclang.CompilationUnit();

  }

  static final public void CompilationUnit() throws ParseException, MidiUnavailableException {MusicTrack track;
    track = TrackInput();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case L:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      track = NoteInput(track);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PlayToken:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      PlayInput(track);
    }
    jj_consume_token(0);

  }

  static final public MusicTrack TrackInput() throws ParseException, MidiUnavailableException {Token trackTk; MusicTrack track;
    trackTk = jj_consume_token(TrackToken);
System.out.println("The track has begun: " + trackTk);
    try{
    track = new MusicTrack();
    {if ("" != null) return track;}
    }
    catch(Exception e)
    {
    e.printStackTrace();
    }
    throw new Error("Missing return statement in function");
  }

  static final public MusicTrack NoteInput(MusicTrack track) throws ParseException, MidiUnavailableException {Token pitch; Token dur; Note note;
    jj_consume_token(L);
    pitch = jj_consume_token(PitchToken);
    jj_consume_token(C);
    dur = jj_consume_token(DurationToken);
    jj_consume_token(R);
System.out.println("The input Pitch is: " + pitch + " The input Duration is: " + dur);
    switch(dur.toString())
    {
        case "w":
        track.setDurations(1);
        track.setPitches(new Pitch(pitch.toString().charAt(0)));
        break;
        case "h":
        track.setDurations(0.5);
        track.setPitches(new Pitch(pitch.toString().charAt(0)));
        break;
        case "q":
        track.setDurations(0.25);
        track.setPitches(new Pitch(pitch.toString().charAt(0)));
        break;
    }
    {if ("" != null) return track;}
    throw new Error("Missing return statement in function");
  }

  static final public void PlayInput(MusicTrack track) throws ParseException, MidiUnavailableException {Token play; Token instType;
    play = jj_consume_token(PlayToken);
    jj_consume_token(InstrumentIdToken);
    instType = jj_consume_token(InstrumentNumToken);
System.out.println("The track will be played on " + instType + " Instrument");
    for(int i=0; i < track.pitches.size(); i++)
    {
        switch(instType.toString().toLowerCase())
        {
            case "piano":
            track.addNote(new Note(track.durations.get(i), track.pitches.get(i), MusicInstrument.PIANO));
            break;
            case "drums":
            track.addNote(new Note(track.durations.get(i), track.pitches.get(i), MusicInstrument.STEEL_DRUMS));
            break;
            case "harmonica":
            track.addNote(new Note(track.durations.get(i), track.pitches.get(i), MusicInstrument.HARMONICA));
            break;
        }
    }
    try{
    track.play();
    }catch(Exception e)
    {
        e.printStackTrace();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public musiclangTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[2];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,0x800,};
   }

  /** Constructor with InputStream. */
  public musiclang(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public musiclang(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new musiclangTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public musiclang(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new musiclangTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public musiclang(musiclangTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(musiclangTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 2; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[14];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 2; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 14; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
